@@ -80,7 +80,7 @@ fchown(int file_descriptor, uid_t owner, gid_t group)
 		goto out;
 	}
 
-	if(fd->fd_DefaultFile == ZERO)
+	if(FLAG_IS_SET(fd->fd_Flags,FDF_STDIO))
 	{
 		__set_errno(EBADF);
 		goto out;
