@@ -80,7 +80,7 @@ ftruncate(int file_descriptor, off_t length)
 		goto out;
 	}
 
-	if(fd->fd_DefaultFile == ZERO)
+	if(FLAG_IS_SET(fd->fd_Flags,FDF_STDIO))
 	{
 		__set_errno(EBADF);
 		goto out;
