@@ -62,7 +62,7 @@ __sync_fd(struct fd * fd,int mode)
 		goto out;
 	}
 
-	if(fd->fd_DefaultFile == ZERO)
+	if(FLAG_IS_SET(fd->fd_Flags,FDF_STDIO))
 	{
 		__set_errno(EBADF);
 		goto out;
